# LearnerDetector

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client.cpp
data/: readme.md  readme.txt
source/: TLD.cpp  TLD.h  TLDSystemStruct.h  main.cpp
source/detector/: Detector.cpp  Detector.h
source/learner/: Learner.cpp  Learner.h
source/tracker/: TrackerBase.cpp  TrackerBase.h  TrackerInstance.cpp  TrackerInstance.h
source/tracker/MedianFlow/: MedianFlow.cpp  MedianFlow.h  OpticalFlow.cpp  OpticalFlow.h  VideoController.h  ViewController.cpp  ViewController.h
source/tracker/camshift/: CamMeanShift.cpp  CamMeanShift.h
source/tracker/medianflow/: MedianFlow.cpp  MedianFlow.h  OpticalFlow.cpp  OpticalFlow.h
source/utils/: NNClassifier.cpp  NNClassifier.h  PatchGenerator.cpp  PatchGenerator.h  RandomFernsClassifier.cpp  RandomFernsClassifier.h  VarClassifier.cpp  VarClassifier.h  datareader.cpp  datareader.h  utils.cpp  utils.h
source/video/: VideoController.cpp  VideoController.h  ViewController.cpp  ViewController.h
toolbox/: convert.py  readme.md
